--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import 'tailwindcss';
 
 body {
   -webkit-tap-highlight-color: transparent;
-  font-family: 'Nunito Sans', system-ui;
+  font-family: 'Montserrat', serif;
   font-optical-sizing: auto;
   font-style: normal;
-  font-variation-settings:
-    'wdth' 100,
-    'YTLC' 500;
 }
